test/files/neg/classmanifests_new_deprecations.check
classmanifests_new_deprecations.scala:2: warning: type ClassManifest in object Predef is deprecated (since 2.10.0): use `scala.reflect.ClassTag` instead
  def cm1[T: ClassManifest] = ???
           ^
classmanifests_new_deprecations.scala:3: warning: type ClassManifest in object Predef is deprecated (since 2.10.0): use `scala.reflect.ClassTag` instead
  def cm2[T](implicit evidence$1: ClassManifest[T]) = ???
                                  ^
classmanifests_new_deprecations.scala:4: warning: type ClassManifest in object Predef is deprecated (since 2.10.0): use `scala.reflect.ClassTag` instead
  val cm3: ClassManifest[Int] = null
           ^
classmanifests_new_deprecations.scala:6: warning: type ClassManifest in package reflect is deprecated (since 2.10.0): use scala.reflect.ClassTag instead
  def rcm1[T: scala.reflect.ClassManifest] = ???
            ^
classmanifests_new_deprecations.scala:7: warning: type ClassManifest in package reflect is deprecated (since 2.10.0): use scala.reflect.ClassTag instead
  def rcm2[T](implicit evidence$1: scala.reflect.ClassManifest[T]) = ???
                                                 ^
classmanifests_new_deprecations.scala:8: warning: type ClassManifest in package reflect is deprecated (since 2.10.0): use scala.reflect.ClassTag instead
  val rcm3: scala.reflect.ClassManifest[Int] = null
                          ^
classmanifests_new_deprecations.scala:10: warning: type ClassManifest in object Predef is deprecated (since 2.10.0): use `scala.reflect.ClassTag` instead
  type CM[T] = ClassManifest[T]
               ^
classmanifests_new_deprecations.scala:15: warning: type ClassManifest in package reflect is deprecated (since 2.10.0): use scala.reflect.ClassTag instead
  type RCM[T] = scala.reflect.ClassManifest[T]
                              ^
error: No warnings can be incurred under -Xfatal-warnings.
8 warnings found
one error found
